--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,11 @@
     <title>Bioinfo</title>
     
     <body>
+      <h1>Welcome to the version 0.1</h1>
+      <h2>Here some test to check if we can retrieve some data from the different APIs</h2>
       <form id="form-test" method="post">
-        <input type="submit" id="submit" value="Test-get-api" />
+        <button name="gwas_api" value="gwas_api" id="gwas">GWAS_API</button>
+        <button name="gtex_api" value="gtex_api" id="gtex">GTEX_API</button>
       </form>
     </body>
   </head>
