--- a/views/test.ejs
+++ b/views/test.ejs
@@ -5,7 +5,7 @@
     <title>Bioinfo</title>
     
     <body>
-      <h1>The fucking response !!!!</h1>
+      <h1>Here the response of the <%= name %> API</h1>
       <label><%= data %></label>
     </body>
   </head>
