--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <button name="gtex_api" value="gtex_api" id="gtex">GTEX_API</button> -->
         <br/>
         <input type="text" name="rs" class="rs" />
-        <input type="submit" id="submit" class="submit" value="Reseach" />
+        <input type="submit" id="submit" class="submit" value="Research" />
       </form>
     </body>
   </head>
