--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,46 +1,86 @@
 <!doctype html>
 <html lang='fr'>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Bioinfo</title>
-    
+
     <body>
-      <% if (data) { %>
-      <table>
-        <thead>
-          <th>Name</th>
-          <th>Location</th>
-          <th>Start</th>
-          <th>End</th>
-          <th>Sequence_Region</th>
-          <th>Allele</th>
-        </thead>
-        <tbody>
-          <td><%= data.name %></td>
-          <td><%= data.location %></td>
-          <td><%= data.start %></td>
-          <td><%= data.end %></td>
-          <td><%= data.seq %></td>
-          <td><%= data.allele %></td>
-        </tbody>
-      </table>
-      <h2>Liste de tous les variants</h2>
-      <%
+        <% if (data) { %>
+            <table>
+                <thead>
+                    <th>Name</th>
+                    <th>Location</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Sequence_Region</th>
+                    <th>Allele</th>
+                    <th>AssoSNP</th>
+                    <th>AssoPvalue</th>              
+                </thead>
+                <tbody>
+                    <td>
+                        <%= data.name %>
+                    </td>
+                    <td>
+                        <%= data.location %>
+                    </td>
+                    <td>
+                        <%= data.start %>
+                    </td>
+                    <td>
+                        <%= data.end %>
+                    </td>
+                    <td>
+                        <%= data.seq %>
+                    </td>
+                    <td>
+                        <%= data.allele %>
+                    </td>
+                    <td>
+                        <%= data.assoSnp %>
+                    </td>
+                    <td>
+                        <%= data.assopValue%>
+                    </td>
+                  
+                </tbody>
+            </table>
+            <h2>Liste de tous les variants</h2>
+            <%
         for (let i in data.variant) {
       %>
-      <label><%= data.variant[i] %></label><br/>
-      <%
+                <label>
+                    <%= data.variant[i] %>
+                </label>
+                <br/>
+                <%
         }
       %>
-      <h2>Liste de tous les genes</h2>
-      <%
+                    <h2>Liste de tous les genes</h2>
+                    <%
         for (let i in data.genes) {
       %>
-      <label><%= data.genes[i] %></label><br/>
-      <%
+                        <label>
+                            <%= data.genes[i] %>
+                        </label>
+                        <br/>
+                        <%
         }
       %>
-     <% } %>
+                            <h2>Nom des genes</h2>
+                            <%
+        for (let i in data.genesName) {
+      %>
+                                <label>
+                                    <%= data.genesName[i] %>
+                                </label>
+                                <br/>
+                                <%
+        }
+      %>
+                                    <% }%>
     </body>
-  </head>
+</head>
+
 </html>
