ajout searchByLocation function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,9 @@
     <form id="form_asso" method="post" action="/asso">
       <input type="text" name="trait" class="trait" />
       <input type="submit" id="submit_trait" class="submit_trait" value="Research_trait" /> </form>
+    <form id="form_asso" method="post" action="/location">
+      <input type="text" name="location" class="location" />
+      <input type="submit" id="submit_location" class="submit_location" value="Research_location" /> </form>
   </body>
 </head>
 
