--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
   <body>
     <h1>Welcome to the version 0.1</h1>
     <h2>Here some test to check if we can retrieve some data from the different APIs</h2>
-    <form id="form-test" method="post" action="/">
-      <!-- <button name="gwas_api" value="gwas_api" id="gwas">GWAS_API</button>
+    <form id="form-test" method="post" action="/snpInfo">
+      <!--  <button name="gwas_api" value="gwas_api" id="gwas">GWAS_API</button>
         <button name="gtex_api" value="gtex_api" id="gtex">GTEX_API</button> -->
       <br/>
       <input type="text" name="rs" class="rs" />
