--- a/views/location.ejs
+++ b/views/location.ejs
@@ -15,8 +15,11 @@
           <td>
             <% for(let i in dataLoc.snp){ %>
               <p>
-                <%=dataLoc.snp[i]%>
-              </p>
+                <%=dataLoc.snp[i]%> <span>
+                <a href="result.ejs" target="lien">
+                  
+                  </a>
+                </span> </p>
               <% } %>
           </td>
         </tbody>
