--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,133 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Bioinfo</title>
-  <!--<link rel="stylesheet" href="../public/Stylesheet/style.css">-->
-  <style>
-    body {
-      margin-left: auto;
-      margin-right: auto;
-      text-align: left;
-      width: 1200px;
-      background-color: #FFF;
-    }
-    
-    .research {
-      background-color: #eeeeee;
-      /* Couleur de fond */
-      border-style: solid;
-      /* Style de la bordure  */
-      border-width: 1px;
-      /* Epaisseur de la bordure  */
-      border-color: #dddddd;
-      /* Couleur de la bordure  */
-      padding: 10px 10px 10px 10px;
-      /* Espace entre les bords et le contenu : haut droite bas gauche  */
-    }
-    
-    #form_snpInfo #rs {
-      background-color: #ffffff;
-      border-style: solid;
-      border-width: 1px;
-      border-color: #dddddd;
-      padding: 5px 10px 5px 10px;
-      box-sizing: border-box;
-      font-family: Lato;
-      font-size: 12px;
-      font-weight: normal;
-      letter-spacing: 1px;
-    }
-    
-    #form_snpInfo #submit_id {
-      background-color: #5f5f5f;
-      color: #fff;
-      border-style: solid;
-      border-width: 1px;
-      padding: 5px 10px 5px 10px;
-      box-sizing: border-box;
-      font-family: PT sans;
-      font-size: 13px;
-      font-weight: normal;
-      letter-spacing: 2px;
-      margin: 10px 0 0 0;
-    }
-    
-    #form_asso #trait {
-      background-color: #ffffff;
-      border-style: solid;
-      border-width: 1px;
-      border-color: #dddddd;
-      padding: 5px 10px 5px 10px;
-      box-sizing: border-box;
-      font-family: Lato;
-      font-size: 12px;
-      font-weight: normal;
-      letter-spacing: 1px;
-    }
-    
-    #form_asso #submit_trait {
-      background-color: #5f5f5f;
-      color: #fff;
-      border-style: solid;
-      border-width: 1px;
-      padding: 5px 10px 5px 10px;
-      box-sizing: border-box;
-      font-family: PT sans;
-      font-size: 13px;
-      font-weight: normal;
-      letter-spacing: 2px;
-      margin: 10px 0 0 0;
-    }
-    
-    #form_loc #location {
-      background-color: #ffffff;
-      border-style: solid;
-      border-width: 1px;
-      border-color: #dddddd;
-      padding: 5px 10px 5px 10px;
-      box-sizing: border-box;
-      font-family: Lato;
-      font-size: 12px;
-      font-weight: normal;
-      letter-spacing: 1px;
-    }
-    
-    #form_loc #submit_location {
-      background-color: #5f5f5f;
-      color: #fff;
-      border-style: solid;
-      border-width: 1px;
-      padding: 5px 10px 5px 10px;
-      box-sizing: border-box;
-      font-family: PT sans;
-      font-size: 13px;
-      font-weight: normal;
-      letter-spacing: 2px;
-      margin: 10px 0 0 0;
-    }
-    
-    #string_msg {
-      font-family: PT sans;
-      font-size: 13px;
-      font-weight: normal;
-      letter-spacing: 2px;
-    }
-    
-    #header {
-      height: 100px;
-      background-color: #5f5f5f;
-      padding: 0 3rem;
-      overflow: hidden;
-      max-width: 100%;
-      background-size: cover;
-    }
-    
-    p {
-      font-style: normal;
-      font-size: 30px;
-      color: #f1f1f1;
-    }
-
-  </style>
+  <link rel="stylesheet" href="Stylesheet/index.css">
 </head>
 
 <body>
