--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,12 +145,12 @@
       <input type="search" name="rs" pattern="^[Rr][Ss]\d+$" placeholder="Search for rs" id="rs" class="rs" />
       <input type="submit" id="submit_id" class="submit" value="Research" /> </form> <span id="string-msg">Exemple :   rs333</span>
     <form id="form_snpInfo" method="post" action="/testAPIEnsembl">
-      <input type="search" name="rs" placeholder="Search for rs" id="rs" class="rs" />
+      <input type="search" name="rs" pattern="^[Rr][Ss]\d+$" placeholder="Search for rs" id="rs" class="rs" />
       <input type="submit" id="submit_id" class="submit" value="Research" /> </form> <span id="string-msg">Exemple :   rs699</span>
     <form id="form_asso" method="post" action="/association">
       <input type="text" placeholder="Search for trait" name="trait" id="trait" />
       <input type="submit" id="submit_trait" class="submit_trait" value="Research_trait" /> </form> <span id="string-msg">Exemple :  breast carcinoma</span>
     <form id="form_loc" method="post" action="/location">
-      <input type="text" placeholder="Search for location" name="location" id="location" />
+      <input type="text" placeholder="Search for location" pattern="^[Rr][Ss]\d+$" name="location" id="location" />
       <input type="submit" id="submit_location" class="submit_location" value="Research_location" /> </form> <span id="string-msg">Exemple :  10:95000000-96000000</span> </div>
 </body>
