fixed css + fusion sur APIEnsembl

--- a/views/snpInfo.ejs
+++ b/views/snpInfo.ejs
@@ -4,11 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>SNP_INFO</title>
-<<<<<<< HEAD
   <link rel="stylesheet" href="Stylesheet/snpInfo.css">
-=======
-  <link rel="stylesheet" href="Stylesheet/snpInfo.css"
->>>>>>> ab6d513960a92bfcb9789a941437d6db35c9e03b
+  <link rel="stylesheet" href="Stylesheet/snpInfo.css">
   <script type="text/javascript" src="https://www.ncbi.nlm.nih.gov/projects/sviewer/js/sviewer.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src='/JavaScript/snpInfoJS.js'></script>
