--- a/public/Stylesheet/index.css
+++ b/public/Stylesheet/index.css
@@ -8,15 +8,11 @@ body {
 
 .research {
   background-color: #eeeeee;
-  /* Couleur de fond */
   border-style: solid;
-  /* Style de la bordure  */
   border-width: 1px;
-  /* Epaisseur de la bordure  */
   border-color: #dddddd;
-  /* Couleur de la bordure  */
+  margin-top: 20px;
   padding: 10px 10px 10px 10px;
-  /* Espace entre les bords et le contenu : haut droite bas gauche  */
 }
 
 #form_snpInfo #rs {
@@ -24,6 +20,9 @@ body {
   border-style: solid;
   border-width: 1px;
   border-color: #dddddd;
+  width: 1000px;
+  height: 40px;
+  box-shadow: 1px 1px 1px #aaa;
   padding: 5px 10px 5px 10px;
   box-sizing: border-box;
   font-family: Lato;
@@ -33,7 +32,9 @@ body {
 }
 
 #form_snpInfo #submit_id {
+  height: 40px;
   background-color: #5f5f5f;
+  margin-top: 2px;
   color: #fff;
   border-style: solid;
   border-width: 1px;
@@ -46,7 +47,46 @@ body {
   margin: 10px 0 0 0;
 }
 
+#form_fileup {
+  margin: 80px auto;
+  width: 400px;
+}
+
+#file,
+#valid {
+  background: #ECECEC;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-family: arial;
+  font-weight: bold;
+  color: #7f7f7f;
+  text-shadow: 0px 1px 0px #fff;
+  border: 1px solid #a7a7a7;
+  margin: 0px auto;
+  margin-top: 100px;
+  box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition: box-shadow 0.5s;
+}
+
+valid:hover {
+  box-shadow: 0px 2px 1px inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+}
+
+valid:active {
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
+  background: -webkit-linear-gradient(top, #d1d1d1 0%, #ECECEC 100%);
+}
+
+#conseilUp {
+  padding-left: 10px;
+  color: #696969;
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: normal;
+}
+
 #form_asso #trait {
+  box-shadow: 1px 1px 1px #aaa;
   background-color: #ffffff;
   border-style: solid;
   border-width: 1px;
@@ -74,6 +114,7 @@ body {
 }
 
 #form_loc #location {
+  box-shadow: 1px 1px 1px #aaa;
   background-color: #ffffff;
   border-style: solid;
   border-width: 1px;
@@ -89,9 +130,9 @@ body {
 #form_loc #submit_location {
   background-color: #5f5f5f;
   color: #fff;
+  padding: 5px 10px 5px 10px;
   border-style: solid;
   border-width: 1px;
-  padding: 5px 10px 5px 10px;
   box-sizing: border-box;
   font-family: PT sans;
   font-size: 13px;
